# dsta_deploy

./: .gitignore  .gitmodules  README.md  builder  builder-hosts  builder.bash  deployer  install-builder.bash  install-deployer-legacy.bash  install-deployer.bash  notes.txt  submodules-commit.txt  submodules-name.txt  todo.TODO
subt_launch_example/: CMakeLists.txt  package.xml
subt_launch_example/.catkin_tools/profiles/: profiles.yaml
subt_launch_example/.catkin_tools/profiles/uav/: config.yaml
subt_launch_example/cmake/: subt_launch_example-extras.cmake
subt_launch_example/launch/: subt-test.launch  subt.launch  subt_basestation.launch  subt_ugv.launch
subt_launch_example/launch/algorithms/basestation/: basestation_azure_gui.launch  basestation_azure_objdet.launch  basestation_robot_gui.launch
subt_launch_example/launch/algorithms/uav/: uav_azure_relay.launch  uav_azure_simulation.launch
subt_launch_example/launch/algorithms/ugv/: ugv_azure_planning.launch  ugv_azure_simulation.launch
subt_launch_example/launch/azure/: basestation.launch
subt_launch_example/launch/robot/: basestation.launch  ugv.launch
subt_launch_example/launch/robot/ugv/: robot_ugv_cameras.launch  (+9 more)
subt_launch_example/launch/scenarios/: basestation.launch  uav.launch  ugv.launch
subt_launch_example/launch/ugv/: azure_ugv_sim.launch
subt_launch_example/logging/: basestation.bash  nuc.bash  planning-pc.bash
subt_launch_example/params/: azure_uav1.env  azure_ugv1.env  robot_ugv1.env  subt.env
subt_launch_example/params/azure/: ugv1.env
subt_launch_example/params/robot/: ugv1.env
subt_launch_example/scripts/: subt-params-install.bash
subt_launch_example/tmux/azure/: basestation.yaml  uav.yaml  ugv.yaml  ugv1.yaml
(+714 files in other folders)
