<package>
  <name>subt_launch_example</name>
  <description> Top level launch configuration </description>
  <version>1.0.0</version>
  <maintainer email="kcujic@andrew.cmu.edu">Katarina Cujic</maintainer>
  <license>BSD</license>

  <!--build tool dependencies-->
  <buildtool_depend>catkin</buildtool_depend>


</package>
